--- a/learn.html
+++ b/learn.html
@@ -34,6 +34,7 @@
                             <a href="index.html" class="nav-link py-5 text-sm font-medium text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-200">Show</a>
                             <a href="learn.html" class="nav-link active py-5 text-sm font-medium text-blue-600 border-b-2 border-blue-600">Learn</a>
                             <a href="recall.html" class="nav-link py-5 text-sm font-medium text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-200">Recall</a>
+                            <a href="progress.html" class="nav-link py-5 text-sm font-medium text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-200">Progress</a>
                         </nav>
 
                         <button onclick="toggleDarkMode()" class="p-2 rounded-xl bg-slate-100 dark:bg-slate-800 text-slate-600 dark:text-slate-400 hover:bg-slate-200 dark:hover:bg-slate-700 transition-colors shrink-0" title="Toggle Dark/Light Mode">
@@ -208,11 +209,22 @@
             }
         }
 
+        function getFlashcardCanvasSize() {
+            const canvas = document.getElementById('flashcard-canvas');
+            if (!canvas) return { width: 600, height: 400 };
+            const container = canvas.parentElement;
+            if (!container) return { width: 600, height: 400 };
+            const width = Math.max(300, container.clientWidth);
+            const height = Math.max(240, container.clientHeight);
+            return { width, height };
+        }
+
         function renderFlashcardStructure() {
             if (flashcardList.length === 0) return;
             const aa = flashcardList[currentCardIndex];
             const SmiDrawer = window.SmiDrawer || SmilesDrawer.SmiDrawer;
-            const smilesDrawer = new SmiDrawer({ ...mainStrategy, width: 1200, height: 900, bondThickness: 3.0 });
+            const size = getFlashcardCanvasSize();
+            const smilesDrawer = new SmiDrawer({ ...mainStrategy, width: size.width, height: size.height, bondThickness: 3.0 });
             smilesDrawer.draw(aa.smiles, '#flashcard-canvas', isDarkMode ? 'dark' : 'light');
         }
 
@@ -221,6 +233,10 @@
         });
 
         window.addEventListener('themeChanged', () => {
+            if (isFlipped) renderFlashcardStructure();
+        });
+
+        window.addEventListener('resize', () => {
             if (isFlipped) renderFlashcardStructure();
         });
 
