--- a/progress.html
+++ b/progress.html
@@ -51,7 +51,7 @@
     </header>
 
     <main class="flex-grow max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 py-8 w-full">
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-4">
             <div class="bg-white dark:bg-slate-900 rounded-2xl border border-slate-200 dark:border-slate-800 p-6 shadow-sm">
                 <p class="text-xs uppercase tracking-widest text-slate-400">Mastered</p>
                 <p id="progress-mastered" class="text-4xl font-black text-blue-600">0</p>
@@ -67,6 +67,11 @@
                 <p id="progress-filter" class="text-2xl font-bold text-slate-700 dark:text-slate-200 capitalize">all</p>
                 <p class="text-sm text-slate-500">Progress shown for all amino acids</p>
             </div>
+        </div>
+        <div class="flex justify-end mb-8">
+            <button id="clear-progress-btn" class="px-4 py-2 rounded-xl border border-red-200 text-red-600 hover:bg-red-50 dark:border-red-900/40 dark:text-red-400 dark:hover:bg-red-900/20 transition-colors font-semibold">
+                Clear Progress
+            </button>
         </div>
 
         <div class="bg-white dark:bg-slate-900 rounded-2xl border border-slate-200 dark:border-slate-800 shadow-sm overflow-hidden">
@@ -96,6 +101,7 @@
     <script src="script.js"></script>
     <script>
         const MASTERY_STREAK = 3;
+        const CLEAR_STORAGE_KEY = 'aa_progress_v1';
 
         function formatAccuracy(correct, wrong) {
             const total = correct + wrong;
@@ -137,13 +143,47 @@
             }).join('');
         }
 
+        function openClearModal() {
+            document.getElementById('clear-modal').classList.remove('hidden');
+        }
+
+        function closeClearModal() {
+            document.getElementById('clear-modal').classList.add('hidden');
+        }
+
+        function clearProgress() {
+            localStorage.removeItem(CLEAR_STORAGE_KEY);
+            renderProgress();
+            closeClearModal();
+        }
+
         window.addEventListener('load', () => {
             renderProgress();
+            document.getElementById('clear-progress-btn').addEventListener('click', openClearModal);
+            document.getElementById('clear-cancel').addEventListener('click', closeClearModal);
+            document.getElementById('clear-confirm').addEventListener('click', clearProgress);
+            document.getElementById('clear-backdrop').addEventListener('click', closeClearModal);
         });
 
         window.addEventListener('storage', () => {
             renderProgress();
         });
     </script>
+
+    <div id="clear-modal" class="hidden fixed inset-0 z-50 flex items-center justify-center">
+        <div id="clear-backdrop" class="absolute inset-0 bg-slate-900/60"></div>
+        <div class="relative bg-white dark:bg-slate-900 rounded-2xl border border-slate-200 dark:border-slate-800 shadow-2xl p-6 w-full max-w-md mx-4">
+            <h3 class="text-lg font-bold text-slate-800 dark:text-slate-100">Reset progress?</h3>
+            <p class="text-sm text-slate-500 dark:text-slate-400 mt-2">This clears all recall progress stored on this device. This cannot be undone.</p>
+            <div class="mt-6 flex justify-end gap-3">
+                <button id="clear-cancel" class="px-4 py-2 rounded-xl border border-slate-200 text-slate-600 hover:bg-slate-50 dark:border-slate-700 dark:text-slate-300 dark:hover:bg-slate-800 transition-colors font-semibold">
+                    Cancel
+                </button>
+                <button id="clear-confirm" class="px-4 py-2 rounded-xl bg-red-600 hover:bg-red-700 text-white font-semibold transition-colors">
+                    Yes, clear
+                </button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
