--- a/progress.html
+++ b/progress.html
@@ -1,3 +1,5 @@
+--- 
+--- 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,8 +22,8 @@
     </script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100 flex flex-col min-h-screen" data-page="progress" data-show-filters="false">
-    <div id="site-header"></div>
+<body data-page="progress" data-show-filters="false" class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100 flex flex-col min-h-screen">
+    {% include header.html %}
 
 
 
@@ -73,7 +75,7 @@
         </div>
     </main>
 
-    <div id="site-footer"></div>
+    {% include footer.html %}
 
     <script src="script.js"></script>
     <script>
