--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amino Acid Explorer</title>
+    <link rel="preconnect" href="https://api.github.com" crossorigin>
+    <link rel="dns-prefetch" href="https://api.github.com">
+    <script>
+        window.__commitMetaPromise = fetch('https://api.github.com/repos/nikhi1g/aminoacids/commits?per_page=1&t=' + Date.now(), {
+            cache: 'no-store',
+            headers: {
+                'Accept': 'application/vnd.github+json',
+                'Cache-Control': 'no-cache',
+                'Pragma': 'no-cache'
+            }
+        })
+            .then(response => response.ok ? response.json() : null)
+            .then(data => {
+                const commit = Array.isArray(data) ? data[0] : data;
+                if (!commit || !commit.sha) return null;
+                const info = commit.commit || {};
+                const committer = info.committer || info.author || {};
+                return { commit: commit.sha, commit_date: committer.date || null };
+            })
+            .catch(() => null);
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -31,7 +52,7 @@
                         <div class="rounded-xl border border-slate-200 dark:border-slate-800 bg-slate-50/80 dark:bg-slate-900/50 px-3 py-2">
                             <div class="text-xs font-semibold uppercase tracking-widest text-slate-400">Amino Acid Explorer</div>
                             <div class="mt-1 flex flex-wrap items-center gap-2 text-[10px] text-slate-500">
-                                <span>Commit: <span id="commit-hash">loading...</span></span>
+                                <span><span id="commit-hash">loading...</span> · <span id="commit-date">loading...</span></span>
                                 <span id="update-indicator" class="hidden inline-flex items-center gap-2">
                                     <span class="rounded-full bg-amber-100 text-amber-700 px-2 py-0.5 font-semibold">New <span data-commit></span></span>
                                     <button id="refresh-site-btn" class="px-2 py-0.5 rounded-full bg-amber-600 text-white font-semibold hover:bg-amber-700 transition-colors">Refresh</button>
