--- a/draw.html
+++ b/draw.html
@@ -124,7 +124,7 @@
                     </div>
                 </div>
 
-                <div class="bg-slate-50/60 dark:bg-slate-800/30 rounded-xl border border-slate-100 dark:border-slate-800 p-4">
+                <div id="draw-expected-wrapper" class="hidden bg-slate-50/60 dark:bg-slate-800/30 rounded-xl border border-slate-100 dark:border-slate-800 p-4">
                     <p class="text-xs uppercase tracking-widest text-slate-400 mb-2">Expected Structure</p>
                     <div class="flex items-center justify-center min-h-[220px]">
                         <canvas id="draw-expected-canvas" class="w-full h-full"></canvas>
@@ -177,6 +177,7 @@
             document.getElementById('draw-feedback').textContent = 'Draw the structure, then check your answer.';
             document.getElementById('draw-user-smiles').textContent = '-';
             document.getElementById('draw-expected-smiles').textContent = '-';
+            document.getElementById('draw-expected-wrapper').classList.add('hidden');
             if (jsmeApplet) {
                 jsmeApplet.reset();
             }
@@ -196,6 +197,7 @@
             const expectedSmiles = drawTarget.smiles;
             document.getElementById('draw-user-smiles').textContent = userSmiles || 'No structure drawn.';
             document.getElementById('draw-expected-smiles').textContent = expectedSmiles;
+            document.getElementById('draw-expected-wrapper').classList.remove('hidden');
 
             const isCorrect = normalizeSmiles(userSmiles) === normalizeSmiles(expectedSmiles);
             const feedback = document.getElementById('draw-feedback');
@@ -215,6 +217,7 @@
             document.getElementById('draw-user-smiles').textContent = '-';
             document.getElementById('draw-feedback').textContent = 'Draw the structure, then check your answer.';
             document.getElementById('draw-feedback').className = 'text-lg font-bold text-slate-600';
+            document.getElementById('draw-expected-wrapper').classList.add('hidden');
         }
 
         window.addEventListener('load', () => {
