--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100">
 
     <header class="bg-white dark:bg-slate-900 border-b dark:border-slate-800 sticky top-0 z-20 shadow-sm transition-colors duration-300">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="w-full px-4">
             <div class="flex flex-col space-y-4 py-4">
                 <div class="flex justify-between items-center h-16">
                     <div class="flex items-center">
@@ -92,8 +92,8 @@
         </div>
     </header>
 
-    <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
-        <div id="molecule-grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
+    <main class="w-full px-2 py-4">
+        <div id="molecule-grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
             <!-- Molecule Cards will be injected here -->
         </div>
     </main>
@@ -119,7 +119,7 @@
             if (!grid) return;
             
             // Apply grid column class dynamically
-            grid.className = `grid grid-cols-${gridColumns} gap-6 transition-all duration-300`;
+            grid.className = `grid grid-cols-${gridColumns} gap-3 transition-all duration-300`;
             grid.innerHTML = '';
             
             const SmiDrawer = window.SmiDrawer || SmilesDrawer.SmiDrawer;
