feat: remove date display from header and cleanup unused code

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <div class="rounded-xl border border-slate-200 dark:border-slate-800 bg-slate-50/80 dark:bg-slate-900/50 px-3 py-2">
                             <div class="text-xs font-semibold uppercase tracking-widest text-slate-400">Amino Acid Explorer</div>
                             <div class="mt-1 flex flex-wrap items-center gap-2 text-[10px] text-slate-500">
-                                <span><span id="commit-hash">loading...</span> · <span id="commit-date">loading...</span></span>
+                                <span id="commit-hash">loading...</span>
 
                             </div>
                         </div>
