--- a/progress.html
+++ b/progress.html
@@ -29,7 +29,7 @@
             <div class="flex flex-col space-y-4 py-4">
                 <div class="flex justify-between items-center h-16">
                     <div class="flex items-center">
-                        <div class="commit-status-card rounded-xl border border-slate-200 dark:border-slate-800 bg-slate-50/80 dark:bg-slate-900/50 px-3 py-2">
+                        <div class="rounded-xl border border-slate-200 dark:border-slate-800 bg-slate-50/80 dark:bg-slate-900/50 px-3 py-2">
                             <div class="text-xs font-bold uppercase tracking-widest text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-teal-500">Amino Acid Explorer</div>
                             <div class="mt-1 flex flex-wrap items-center gap-2 text-[10px] text-slate-500">
                                 <span id="commit-hash">loading...</span>
