Fix OpenChemLib CDN path

--- a/draw.html
+++ b/draw.html
@@ -21,7 +21,7 @@
         }
     </script>
     <script src="https://unpkg.com/jsme-editor@latest/jsme.nocache.js"></script>
-    <script src="https://unpkg.com/openchemlib/dist/openchemlib-full.js"></script>
+    <script src="https://unpkg.com/openchemlib@9.18.2/dist/openchemlib.js"></script>
     <script src="https://unpkg.com/smiles-drawer@2.0.1/dist/smiles-drawer.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
